--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "loginreg",
   "version": "0.0.1",
   "description": "Login application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
